--- a/exer_proj/node_crash_course/package.json
+++ b/exer_proj/node_crash_course/package.json
@@ -4,11 +4,15 @@
   "description": "node crash course",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "Simo Kuosmanen",
   "license": "ISC",
   "dependencies": {
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
